- Realização das modificações solicitadas pela Meimei. - Atualização dos dados conforme Censo SUAS 2016.

--- a/src/app/pages/tela2/dadosMunicipais/dadosMunicipais.html
+++ b/src/app/pages/tela2/dadosMunicipais/dadosMunicipais.html
@@ -5,8 +5,8 @@
  </p>
 
   <p>
-    <span> 94.778 </span>
-    <span class="alinhadir"> 0,733 </span>
+    <span> 95.726 </span>
+    <span class="alinhadir"> 0,73 </span>
   </p>
   <hr>
 
@@ -15,7 +15,7 @@
   </p>
 
   <p>
-   MAÉRCIO DE ALMEIDA
+   MÁRIO REIS ESTEVES
   </p>
   <hr>
 
@@ -24,7 +24,25 @@
   </p>
 
   <p>
-    ROSIMAR BENÍCIO
+    PALOMA BLUNK DOS REIS
+  </p>
+  <hr>
+
+  <p class="negrito">
+    PORTE DO MUNICÍPIO
+  </p>
+
+  <p>
+    MÉDIO PORTE
+  </p>
+  <hr>
+
+  <p class="negrito">
+   EQUIPAMENTO DE SEGURANÇA ALIMENTAR
+  </p>
+
+  <p>
+    0
   </p>
 
 
