--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
@@ -13,7 +13,7 @@
          <img src="{{ ( 'bolsa-familia'| baProfilePicture ) }}" width="60" height="50" align="left">
             <span class="texto"> BOLSA <br> FAMÍLIA </span>
            <br> <br>  <span class="percentual"> 15,28% <p class="fonte2"> DA POPULAÇÃO </p> </span>
-           <br> <span class="dados2"> 4.204 <p class="fonte2"> FAMÍLIAS BENEFICIÁRIAS </p> </span>
+           <br> <span class="dados2"> 4.336 <p class="fonte2"> FAMÍLIAS BENEFICIÁRIAS </p> </span>
            <br> <span class="percentual"> 78,51% <p class="fonte2"> COBERTURA</p> </span> </p>
         </th>
       </tr>
@@ -21,13 +21,13 @@
       <tr>
         <td class="fonte">  <img src="{{ ( 'cad-unico'| baProfilePicture ) }}" width="35" height="35" >
           CADASTRO ÚNICO </td>
-        <td class="dados"> 7.753 <p class="fonte2"> FAMÍLIAS REGISTRADAS </p> </td>
+        <td class="dados"> 8.045 <p class="fonte2"> FAMÍLIAS REGISTRADAS </p> </td>
       </tr>
 
       <hr>
       <tr>
         <td class="fonte"> <img src="{{ ( 'check'| baProfilePicture ) }}" width="40" height="30" >
-          BENEFÍCIOS EVENTUAIS </td>
+          RESOLUÇÕES SOBRE BENEFÍCIOS EVENTUAIS </td>
         <td> <img class="alinhadir" src="{{ ( 'beneficios-eventuais'| baProfilePicture ) }}" width="30" height="25" > </td>
       </tr>
 
@@ -40,7 +40,7 @@
 
       <hr>
       <tr>
-        <td class="fonte"> &nbsp; <img src="{{ ( 'uncheck'| baProfilePicture ) }}" width="30" height="25" >
+        <td class="fonte"> &nbsp; <img src="{{ ( 'check'| baProfilePicture ) }}" width="30" height="25" >
           PAEFI </td>
         <td> <img class="alinhadir" src="{{ ( 'paefi'| baProfilePicture ) }}" width="35" height="30" > </td>
       </tr>
@@ -48,8 +48,10 @@
       <hr class="linha-horizontal">
     <tr>
       <th class="alinhaesq" colspan="4" >  <p class="negrito"> <img src="{{ ( 'bpc'| baProfilePicture ) }}" width="50" height="35" >
-        <span class="texto">  BENEFÍCIOS DE PRESTAÇÃO CONTINUADA </span> <span class="dados"> 1.624 </span>
-        <span class="alinhacentro"> PESSOAS </span></p></th>
+        <span class="texto">  BENEFÍCIOS DE PRESTAÇÃO CONTINUADA </span> <span class="dados"> 1.773 </span>
+        <span class="alinhacentro"> PESSOAS </span> </p>
+        <p class="alinhacentro2"> <span class="dados"> R$ 1.651.046,79 </span>
+          VALOR TOTAL REPASSADO </p> </th>
     </tr>
       </tbody>
   </table>
