--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.scss
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.scss
@@ -9,6 +9,13 @@
   color: black;
 }
 
+.alinhacentro2{
+  text-align:left;
+  margin-left: 150px;
+  font-size: 10px;
+  color: black;
+}
+
 
 .fonte{
   font-size: 15px;
@@ -44,7 +51,6 @@ font-weight: bold;
   float:right;
 }
 
-
 .percentual{
   font-family: "Arial Black", arial-black;
   font-size: 15px;
@@ -56,13 +62,13 @@ font-weight: bold;
 
 
 hr{
-width: 150%;
+width: 133%;
   color: white;
 
 }
 
 .linha-horizontal{
-  width:370%;
+  width:497%;
   color: white;
 }
 
