--- a/src/app/pages/tela1/tela1.html
+++ b/src/app/pages/tela1/tela1.html
@@ -18,16 +18,21 @@
   </div>
 
 <div class="row">
-  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
     <pecasAtuacao-table></pecasAtuacao-table>
   </div>
 
-  <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
     <legislacao-table></legislacao-table>
   </div>
 
-    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
     <orcamento-table></orcamento-table>
   </div>
+
+  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
+    <capacidade-atendimento></capacidade-atendimento>
+  </div>
+
 </div>
 
