- Alteração do ícone: capacidade de atendimento.

--- a/src/app/pages/tela1/capacidadeAtendimento/capacidadeAtendimento.html
+++ b/src/app/pages/tela1/capacidadeAtendimento/capacidadeAtendimento.html
@@ -4,7 +4,7 @@
     <tr class="black-muted-bg">
       <td class="legislacao-icons"> </td>
 
-      <td > <img src="{{ ( 'inspeção'| baProfilePicture ) }}" width="40" height="50" >
+      <td > <img src="{{ ( 'capacidade-atendimento'| baProfilePicture ) }}" width="40" height="50" >
         <b> CAPACIDADE DE ATENDIMENTO </b> <br>
         Relação e acesso à toda Legislação pertinente em relação
         ao tema e norteadora dos indicadores do projeto</td>
@@ -13,19 +13,19 @@
     <tbody>
 
     <tr class="no-top-border">
-      <td> <img src="{{ ( 'inspeção'| baProfilePicture ) }}" width="40" height="40" > </td>
+      <td> <img src="{{ ( 'capacidade-atendimento'| baProfilePicture ) }}" width="40" height="40" > </td>
       <td> PROTEÇÃO SOCIAL BÁSICA <img src="{{ ( 'visualizar'| baProfilePicture ) }}" width="30" height="30" align="right"> </td>
 
     </tr>
 
     <tr class="no-top-border">
-      <td> <img src="{{ ( 'inspeção'| baProfilePicture ) }}" width="40" height="40" > </td>
+      <td> <img src="{{ ( 'capacidade-atendimento'| baProfilePicture ) }}" width="40" height="40" > </td>
       <td> PROTEÇÃO SOCIAL ESPECIAL <img src="{{ ( 'visualizar'| baProfilePicture ) }}" width="30" height="30" align="right"> </td>
 
     </tr>
 
     <tr class="no-top-border">
-      <td> <img src="{{ ( 'inspeção'| baProfilePicture ) }}" width="40" height="40" > </td>
+      <td> <img src="{{ ( 'capacidade-atendimento'| baProfilePicture ) }}" width="40" height="40" > </td>
       <td> PACTO DE APRIMORAMENTO <img src="{{ ( 'visualizar'| baProfilePicture ) }}" width="30" height="30" align="right"> </td>
     </tr>
 
