--- a/src/app/pages/tela2/mapa-estadual/mapa-estadual.html
+++ b/src/app/pages/tela2/mapa-estadual/mapa-estadual.html
@@ -1,3 +1,3 @@
 <div>
-  <img src="{{ ( 'mapa-rj2'| baProfilePicture ) }}" width="450%" >
+  <img src="{{ ( 'mapa-rj2'| baProfilePicture ) }}" >
 </div>
