- Mudança na divisão dos equipamentos do ba-card rio de janeiro. - Alteração do ano de 2015 para 2017 nos indicadores orçamentários. - Aumento do ícone check do PAEFI nos indicadores sociais.

--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
@@ -40,7 +40,7 @@
 
       <hr>
       <tr>
-        <td class="fonte"> &nbsp; <img src="{{ ( 'check'| baProfilePicture ) }}" width="30" height="25" >
+        <td class="fonte"><img src="{{ ( 'check'| baProfilePicture ) }}" width="40" height="30" >
           PAEFI </td>
         <td> <img class="alinhadir" src="{{ ( 'paefi'| baProfilePicture ) }}" width="35" height="30" > </td>
       </tr>
