--- a/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.html
+++ b/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.html
@@ -14,12 +14,12 @@
 
 
      <tr>
-       <td class="alinhacentro borda-td-top"> CRAS <p class="dados"> 453 </p> </td>
-       <td class="alinhacentro borda-td-top borda-td-left" rowspan="2"> CENTRO <br>  POP <p class="dados"> 19 </p> </td>
+       <td class="alinhacentro borda-td-top borda-td-dir"> CRAS <p class="dados"> 453 </p> </td>
+       <td class="alinhacentro borda-td-top"> CREAS <p class="dados"> 19 </p> </td>
      </tr>
 
      <tr>
-       <td class="alinhacentro borda-td-top borda-td-dir"> CREAS <p class="dados"> 116 </p></td>
+       <td class="alinhacentro borda-td-top" colspan="2"> CENTRO POP <p class="dados"> 116 </p></td>
      </tr>
 
     </table>
