--- a/src/app/pages/tela1/capacidadeAtendimento/capacidadeAtendimento.html
+++ b/src/app/pages/tela1/capacidadeAtendimento/capacidadeAtendimento.html
@@ -26,7 +26,7 @@
 
     <tr class="no-top-border">
       <td> <img src="{{ ( 'capacidade-atendimento'| baProfilePicture ) }}" width="40" height="40" > </td>
-      <td> PACTO DE APRIMORAMENTO <img src="{{ ( 'visualizar'| baProfilePicture ) }}" width="30" height="30" align="right"> </td>
+      <td> METAS DO PACTO DE APRIMORAMENTO <img src="{{ ( 'visualizar'| baProfilePicture ) }}" width="30" height="30" align="right"> </td>
     </tr>
 
 
