--- a/src/app/pages/tela3/tela3.html
+++ b/src/app/pages/tela3/tela3.html
@@ -21,12 +21,17 @@
 
 </style>
 
-
 <hr color="white">
 
-<div class="button-wrapper">
-  <button type="button" class="btn btn-raised"><b>INÍCIO</b></button>
-  <button type="button" class="btn btn-raised"><b>AJUDA</b></button>
+<div class="row">
+  <div class="col-xl-1 col-lg-1 col-md-1">
+    <inicio-button> </inicio-button>
+  </div>
+
+<div class="col-xl-1 col-lg-1 col-md-1">
+  <ajuda-button> </ajuda-button>
+</div>
+
 </div>
 
 
