--- a/src/app/pages/tela3/tela3.html
+++ b/src/app/pages/tela3/tela3.html
@@ -18,7 +18,6 @@
     overflow: auto;
     float:none;
   }
-
 </style>
 
 <hr color="white">
@@ -494,4 +493,4 @@
 <div class="row">
   <div></div>
 
-
+</div>
