- Criação do componente: Tipo de inspeção.

--- a/src/app/pages/tela3/tela3.html
+++ b/src/app/pages/tela3/tela3.html
@@ -3,8 +3,9 @@
     color: #000000;
   }
 
-  h4{
+  h4 {
     color: #000000;
+  }
 
     span{
       color: #000000;
@@ -33,25 +34,18 @@
 
 </div>
 
+<div class="row">
+  <nova-inspecao> </nova-inspecao>
+  <visualizar-inspecoes> </visualizar-inspecoes>
+</div>
+
+
+
 
 &nbsp;
 <div class="widgets">
 
   <div class="row">
-  </div>
-
-
-  <div class="row">
-    <ba-card class="col-xlg-6 col-xl-0"
-             title=" NOVA INSPEÇÃO " baCardClass="small-card">
-      <b><h4> <td> <img src="{{ ( 'inspecoes'| baProfilePicture ) }}" width="60" height="55">&nbsp;INICIAR UMA NOVA INSPEÇÃO EM UM ESTABELECIMENTO.</h4></b>
-    </ba-card>
-
-
-    <ba-card class="col-xlg-6 col-xl-0"
-             title="VISUALIZAÇÃO DE INSPEÇÕES - FILTROS PARA SELEÇÃO" baCardClass="small-card">
-      <b> <h4> <img src="{{ ( 'filtroo'| baProfilePicture ) }}" width="45" height="45">&nbsp;&nbsp;OS CAMPOS COM (*) SÃO CONSIDERADOS OBRIGATÓRIOS.</h4></b>
-    </ba-card>
   </div>
 
 
