--- a/src/app/pages/tela3/buttons/components/tipoInspecaoButton/tipoInspecaoButton.html
+++ b/src/app/pages/tela3/buttons/components/tipoInspecaoButton/tipoInspecaoButton.html
@@ -1,5 +1,5 @@
 <div class="btn-group flex-dropdown" dropdown>
-      <button type="button" class="btn bg-primary" dropdownToggle addToggleClass="true">Tipo de Equipamento
+      <button type="button" class="btn btn-default" dropdownToggle addToggleClass="true">Tipo de Inspeção
         <span class="sr-only">Toggle Dropdown</span></button>
       <ul class="dropdown-menu" dropdownMenu>
         <li class="dropdown-item"><a href="#"> CRAS </a></li>
