--- a/src/app/pages/tela1/tela1.html
+++ b/src/app/pages/tela1/tela1.html
@@ -1,38 +1,31 @@
-<div class="row">
-  <div class="col-xlg-4 col-lg-5 col-md-5 col-sm-5 col-xs-5">
-    <typography></typography>
-  </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xl-4 col-lg-5 ">
+      <typography></typography>
+    </div>
 
+    <div class="col-xl-7">
+        <contextual-table></contextual-table>
+        <chartist></chartist>
+    </div>
+    </div>
 
-
-
-  <div>
-    <!-- INDICADORES REFERENTES ÀS ÚLTIMAS INSPEÇÕES EM CADA MUNICÍPIO -->
-    <e-buttons></e-buttons>
-  </div>
-
-  <div class="col-xlg-7 col-lg-7  col-md-7 col-sm-7 col-xs-7">
-      <contextual-table></contextual-table>
-      <chartist></chartist>
-  </div>
-  </div>
-
-<div class="row">
-  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
-    <pecasAtuacao-table></pecasAtuacao-table>
-  </div>
-
-  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
-    <legislacao-table></legislacao-table>
-  </div>
+  <div class="row">
+    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
+      <pecasAtuacao-table></pecasAtuacao-table>
+    </div>
 
     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
-    <orcamento-table></orcamento-table>
-  </div>
+      <legislacao-table></legislacao-table>
+    </div>
 
-  <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
-    <capacidade-atendimento></capacidade-atendimento>
-  </div>
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
+      <orcamento-table></orcamento-table>
+    </div>
 
+    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-xs-3">
+      <capacidade-atendimento></capacidade-atendimento>
+    </div>
+
+  </div>
 </div>
-
