--- a/src/app/pages/tela1/typography/typography.html
+++ b/src/app/pages/tela1/typography/typography.html
@@ -8,28 +8,28 @@
                  Social, bem como provocar a intervenção dos atores sociais vocacionados
                  para esta política pública. </p>
 
-          <ul style="list-style-type:disc ">
-            <li> Exigir a implementação integral da Política de Assistência Social; </li>
+          <ul style="list-style-type:none">
+            <li>✔ Exigir a implementação integral da Política de Assistência Social; </li>
             &nbsp;
             &nbsp;
-            <li> Construção de uma metodologia de trabalho nova; </li>
-            &nbsp;
-            &nbsp;
-
-            <li> Criação de indicadores para dimensionamento da oferta e demanda; </li>
+            <li>✔ Construção de uma metodologia de trabalho nova; </li>
             &nbsp;
             &nbsp;
 
-            <li> Estabelecer, mediante diálogo com todas as Tutelas Coletivas do MPRJ, padrões
+            <li>✔ Criação de indicadores para dimensionamento da oferta e demanda; </li>
+            &nbsp;
+            &nbsp;
+
+            <li>✔ Estabelecer, mediante diálogo com todas as Tutelas Coletivas do MPRJ, padrões
               de referência para avaliação da quantidade e qualidade dos serviços ofertados; </li>
             &nbsp;
             &nbsp;
 
-            <li> Monitorar os padrões de referência por meio de indicadores; </li>
+            <li>✔ Monitorar os padrões de referência por meio de indicadores; </li>
             &nbsp;
             &nbsp;
 
-            <li> Articular parcerias com instâncias de controle social para fomentação da
+            <li>✔ Articular parcerias com instâncias de controle social para fomentação da
               fiscalização do SUAS; </li>
           </ul>
 </div>
