--- a/src/app/pages/tela4/tela4.html
+++ b/src/app/pages/tela4/tela4.html
@@ -1,109 +1,142 @@
+<div class="container-fluid">
+  <div class="widgets">
 
+    <div class="container">
 
-<hr color="white">
-
-<div class="button-wrapper">
-  <button type="button" class="btn btn-raised"><b>INÍCIO</b></button>
-  <button type="button" class="btn btn-raised"><b>AJUDA</b></button>
-</div>
-
-
-&nbsp;
-<div class="widgets">
-
-  <div class="row">
-  <div></div>
-
-
-    <div>
-      <ba-card class="col-xl-6 col-xl-15"
-               title="FALE CONOSCO" baCardClass="feed-panel">
-        &nbsp;
-        <img src="{{ ( 'porte'| baProfilePicture ) }}" width="860" height="115">
-        <h4> <b> <img src="{{ ( 'fale conosco'| baProfilePicture ) }}" width="45" height="45"> &nbsp;Avenida Marechal Câmara, 370 - 6º Andar - Centro - Rio de Janeiro - RJ - 20.020-080 </b> </h4>
-        <h4> <b> <img src="{{ ( 'email'| baProfilePicture ) }}" width="20" height="20"> &nbsp;&nbsp;cao.cidadania@mprj.mp.br <img src="{{ ( 'telefone'| baProfilePicture ) }}" width="20" height="20"> &nbsp;&nbsp;2531-9728 | 2220-2462 | 2215-1407 - FAX 2240-4653 </b> </h4>
-
-        <hr color="white">
-
-        <label class="col-sm-1 form-control-label" for="inputEmail3"><b>NOME</b></label>
-        <div class="col-sm-10">
+      <div class="button-wrapper" align="center">
+        <div class="col-md-6">
+          <button type="button" class="btn btn-raised"><b>INÍCIO</b></button>
         </div>
-        &nbsp;
-        <input class="form-control" id="inputFirstName" placeholder="Seu primeiro nome..." type="text">
-        &nbsp;
-
-        <div class="row">
+        <div class="col-md-6">
+          <button type="button" class="btn btn-raised"><b>AJUDA</b></button>
         </div>
+      </div>
+      <br/><br/><br/>
+      <div>
+        <ba-card class="col-xl-6 col-xl-15" title="FALE CONOSCO" baCardClass="feed-panel">
 
-        <label class="col-sm-2 form-control-label" for="inputEmail3"><b>E-MAIL</b></label>
-        <div class="col-sm-10">
-        </div>
-        &nbsp;
-        <input class="form-control" id="inputFirstName" placeholder="Fulano.tal@mprj.mp.br" type="text">
-        &nbsp;
+          <div class="img-wrapper">
+            <img class="img-responsive" src="{{ ( 'porte'| baProfilePicture ) }}" border="0" style="display:block;">
+          </div>
+          <br/>
+          <h4>
+            <b>
+              <img class="img-responsive" src="{{ ( 'fale conosco'| baProfilePicture ) }}" width="45" height="45">Avenida Marechal Câmara, 370 - 6º Andar - Centro - Rio de Janeiro - RJ - 20.020-080
+              <br/><br/>
+              <img class="img-responsive" src="{{ ( 'email'| baProfilePicture ) }}" width="20" height="20">cao.cidadania@mprj.mp.br
+              <br/><br/>
+              <img class="img-responsive" src="{{ ( 'telefone'| baProfilePicture ) }}" width="20" height="20">531-9728 | 2220-2462 | 2215-1407 - FAX 2240-4653
+            </b>
+          </h4>
 
-        <div class="row">
-        </div>
+          <hr color="white">
 
-        <label class="col-sm-2 form-control-label" for="inputEmail3"><b>MENSAGEM</b></label>
-        <div class="col-sm-10">
-        </div>
-        &nbsp;
+          <label class="col-sm-1 form-control-label" for="inputFirstName"><b>NOME</b></label>
+          <div class="col-sm-10">
+          </div>
+          <input class="form-control" id="inputFirstName" placeholder="Seu primeiro nome..." type="text">
 
-        <div class="form-group">
-          &nbsp;&nbsp; <textarea class="form-control" placeholder="Escreve aqui sua mensagem..."></textarea>
-        </div>
-        <div>
-        <button type="submit" class="btn btn-success">&nbsp;&nbsp;&nbsp;ENVIAR&nbsp;&nbsp;&nbsp;</button>
-        </div>
-&nbsp;
+          <br/>
 
-        <ba-card class="col-xl-0 col xl-0"
-        title="MANUAIS E CARTILHAS" baCardClass=""> &nbsp;&nbsp;&nbsp;<img src="{{ ( 'manuais'| baProfilePicture ) }}" width="45" height="45">
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="125" height="130">
-          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
-          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
-          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
-          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'população'| baProfilePicture ) }}" width="120" height="130">
+          <label class="col-sm-2 form-control-label" for="inputEmail"><b>E-MAIL</b></label>
+          <div class="col-sm-10">
+          </div>
+          <input class="form-control" id="inputEmail" placeholder="Fulano.tal@mprj.mp.br" type="text">
+
+          <br/>
+
+          <label class="col-sm-2 form-control-label" for="inputMensagem"><b>MENSAGEM</b></label>
+          <div class="col-sm-10">
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" id="inputMensagem" placeholder="Escreve aqui sua mensagem..."></textarea>
+          </div>
+          <div>
+            <button type="submit" class="btn btn-success">ENVIAR</button>
+          </div>
+          <br/>
+          <hr color="white">
+
+          <ba-card class="col-xl-0 col xl-0" title="MANUAIS E CARTILHAS" baCardClass="">
+            <div class="row">
+              <div class="col-md-2">
+                <div class="img-wrapper">
+                  <img class="img-responsive" src="{{ ( 'manuais'| baProfilePicture ) }}">
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="img-wrapper">
+                  <img class="img-responsive" src="{{ ( 'cartilha'| baProfilePicture ) }}">
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="img-wrapper">
+                  <img class="img-responsive" src="{{ ( 'cartilha'| baProfilePicture ) }}">
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="img-wrapper">
+                  <img class="img-responsive" src="{{ ( 'cartilha'| baProfilePicture ) }}">
+                </div>
+              </div>
+            </div>
+            <br/>
+            <div class="row">
+              <div class="col-md-2">
+                <div class="img-wrapper">
+                  <img class="img-responsive" src="{{ ( 'cartilha'| baProfilePicture ) }}">
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="img-wrapper">
+                  <img class="img-responsive" src="{{ ( 'cartilha'| baProfilePicture ) }}">
+                </div>
+              </div>
+            </div>
+          </ba-card>
         </ba-card>
-        <div>
+      </div>
 
 
-        <div>
-        </div>
-        </div>
-      </ba-card>
-    </div>
+      <div class="container">
+        <ba-card class="col-xl-6 col xl-0" title="PERGUNTAS FREQUENTES" baCardClass="">
 
+          <div class="panel panel-default">
 
-    <div>
-      <ba-card class="col-xl-6 col xl-0"
-               title="PERGUNTAS FREQUENTES" baCardClass="">
+            <hr color="white">
 
-        <div class="panel panel-default">
-          <img src="{{ ( 'faq'| baProfilePicture ) }}" width="45" height="45">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><h4><b>1. O QUE É CADASTRO ÚNICO?</b></h4></a>
-          <div id="collapseOne" class="panel-collapse collapse">
-            <div class="panel-body">
-              <h3><i>&nbsp; O Cadastro Único para Programas Sociais do Governo Federal é um instrumento que identifica e caracteriza as famílias
-                com renda mensal de até meio salário mínimo por pessoa ou de três salários mínimos no total.
-                Dessa forma, o Cadastro Único possibilita conhecer a realidade socioeconômica dessas famílias, trazendo informações
-                de todo o núcleo familiar, das características do domicílio, das formas de acesso a serviços públicos essenciais e também
-                dados de cada um dos componentes da família.
-                O Cadastro Único, regulamentado pelo Decreto nº 6.135/07 e coordenado pelo Ministério do Desenvolvimento Social e Combate
-                à Fome (MDS), deve ser obrigatoriamente utilizado para seleção de benefíciários e integração de programas sociais do Governo Federal,
-                como o Bolsa Família. Suas informações podem também ser utilizadas pelos governos estaduais e municipais para obter o diagnóstico
-                socioeconômico das famílias cadastradas, possibilitando a análise das suas principais necessidades. Famílias com renda superior a meio
-                salário mínimo também podem ser inscritas, desde que sua inserção esteja vinculada à inclusão e/ou permanência em programas sociais
-                implementados pelo poder público nas três esferas do Governo. </i></h3>
+            <div class="col-md-0" align="center">
+              <img src="{{ ( 'faq'| baProfilePicture ) }}" width="45" height="45">
+            </div>
+
+            <hr color="white">
+
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+              <h4><b>1. O QUE É CADASTRO ÚNICO?</b></h4>
+            </a>
+            <div id="collapseOne" class="panel-collapse collapse">
+              <div class="panel-body">
+                <h3><i> O Cadastro Único para Programas Sociais do Governo Federal é um instrumento que identifica e caracteriza as famílias
+                  com renda mensal de até meio salário mínimo por pessoa ou de três salários mínimos no total.
+                  Dessa forma, o Cadastro Único possibilita conhecer a realidade socioeconômica dessas famílias, trazendo informações
+                  de todo o núcleo familiar, das características do domicílio, das formas de acesso a serviços públicos essenciais e também
+                  dados de cada um dos componentes da família.
+                  O Cadastro Único, regulamentado pelo Decreto nº 6.135/07 e coordenado pelo Ministério do Desenvolvimento Social e Combate
+                  à Fome (MDS), deve ser obrigatoriamente utilizado para seleção de benefíciários e integração de programas sociais do Governo Federal,
+                  como o Bolsa Família. Suas informações podem também ser utilizadas pelos governos estaduais e municipais para obter o diagnóstico
+                  socioeconômico das famílias cadastradas, possibilitando a análise das suas principais necessidades. Famílias com renda superior a meio
+                  salário mínimo também podem ser inscritas, desde que sua inserção esteja vinculada à inclusão e/ou permanência em programas sociais
+                  implementados pelo poder público nas três esferas do Governo. </i></h3>
+              </div>
             </div>
           </div>
-        </div>
 
           <hr color="white">
 
           <div class="panel panel-default">
-            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwO">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>2. QUAIS OS DIAS E HORÁRIOS DE FUNCIONAMENTO DO CRAS?</b></h4></a>
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwO">
+              <h4><b>2. QUAIS OS DIAS E HORÁRIOS DE FUNCIONAMENTO DO CRAS?</b></h4>
+            </a>
             <div id="collapseTwO" class="panel-collapse collapse">
               <div class="panel-body">
                 <h3><i> Dia: Segunda à Sexta. - Horário: 08:00h às 18:00h.</i></h3>
@@ -114,7 +147,9 @@
             <hr color="white">
 
             <div class="panel panel-default">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>3. QUAIS SÃO AS FAIXAS ETÁRIAS DO SERVIÇO DE CONVIVÊNCIA E FORTALECIMENTO DE VÍNCULOS?</b></h4></a>
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                <h4><b>3. QUAIS SÃO AS FAIXAS ETÁRIAS DO SERVIÇO DE CONVIVÊNCIA E FORTALECIMENTO DE VÍNCULOS?</b></h4>
+              </a>
               <div id="collapseThree" class="panel-collapse collapse">
                 <div class="panel-body">
                   <h3><i>AAAAAA BBBBBB CCCCCC DDDDDD</i></h3>
@@ -124,7 +159,9 @@
               <hr color="white">
 
               <div class="panel panel-default">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>4. O QUE SÃO BENEFÍCIOS INDIVIDUAIS?</b></h4></a>
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+                  <h4><b>4. O QUE SÃO BENEFÍCIOS INDIVIDUAIS?</b></h4>
+                </a>
                 <div id="collapseFour" class="panel-collapse collapse">
                   <div class="panel-body">
                     <h3><i>AAAAAA BBBBBB CCCCCC DDDDDD</i></h3>
@@ -133,7 +170,11 @@
 
 
                 <hr color="white">
-
-
-
-
+              </div>
+            </div>
+          </div>
+        </ba-card>
+      </div>
+    </div>
+  </div>
+</div>
